reverts back mobile css with fix for device width to now properly grow text when on smaller devices for readability

--- a/style.css
+++ b/style.css
@@ -85,7 +85,15 @@ a {
 
 /* MOBILE */
 
-@media only screen and (max-width : 768px) {
+@media only screen and (max-device-width : 768px) {
+
+  .page-title {
+    font-size: 48px;
+  }
+
+  .page-tagline {
+    font-size: 36px;
+  }
 
   .product-container {
     padding-bottom: 20px;
@@ -95,6 +103,10 @@ a {
     font-size: 50px;
     top: 8px;
     padding: 0px 25px 8px 15px;
+  }
+
+  .product-description {
+    font-size: 24px;
   }
 
   .product-container:hover .product-overlay {
